<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:material="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/menu_vip"
        android:icon="@drawable/ic_crown"
        android:title="VIP"
        material:showAsAction="always" />
    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_action_history"
        android:title="@string/history"
        material:showAsAction="always" />
    <item
        android:id="@+id/create"
        android:icon="@drawable/ic_action_create"
        android:title="@string/compose_barcode"
        material:showAsAction="always" />
    <item
        android:id="@+id/pickFile"
        android:icon="@drawable/ic_action_pick_file"
        android:title="@string/pick_file"
        material:showAsAction="always" />
    <item
        android:id="@+id/ocrCard"
        android:icon="@drawable/ic_action_vcard"
        android:title="@string/ocr_business_card"
        material:showAsAction="ifRoom" />
    <item
        android:id="@+id/switchCamera"
        android:icon="@drawable/ic_action_switch_camera"
        android:title="@string/switch_camera"
        material:showAsAction="always" />
    <item
        android:id="@+id/bulkMode"
        android:checkable="true"
        android:icon="@drawable/ic_action_bulk_mode"
        android:title="@string/bulk_mode"
        material:showAsAction="ifRoom" />
    <item
        android:id="@+id/restrictFormat"
        android:icon="@drawable/ic_action_restrict_format"
        android:title="@string/restrict_format"
        material:showAsAction="ifRoom" />
    <item
        android:id="@+id/incognitoMode"
        android:checkable="true"
        android:icon="@android:drawable/ic_secure"
        android:title="@string/incognito_mode"
        material:showAsAction="ifRoom" />
    <item
        android:id="@+id/auditMode"
        android:checkable="true"
        android:icon="@drawable/ic_action_history"
        android:title="@string/audit_mode"
        material:showAsAction="ifRoom" />
    <item
        android:id="@+id/preferences"
        android:icon="@drawable/ic_action_preferences"
        android:title="@string/preferences"
        material:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuRate"
        android:icon="@drawable/baseline_rate_review_24"
        android:title="@string/rate_app"
        material:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuMore"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/more_app"
        material:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuShare"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share_app"
        material:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuPolicy"
        android:icon="@drawable/baseline_local_police_24"
        android:title="@string/term_policy"
        material:showAsAction="ifRoom" />
    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_action_info"
        android:title="@string/info"
        material:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuBetaTester"
        android:icon="@drawable/baseline_self_improvement_24"
        android:title="@string/join_beta_tester"
        material:showAsAction="ifRoom" />
</menu>
