<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:material="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/copyScan"
        android:icon="@drawable/ic_action_copy"
        android:title="@string/copy_scan"
        material:showAsAction="always" />
    <item
        android:id="@+id/showScanAsQr"
        android:icon="@drawable/ic_action_create"
        android:title="@string/show_scan_as_qr"
        material:showAsAction="ifRoom" />
    <item
        android:id="@+id/editScan"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/edit_scan"
        material:showAsAction="ifRoom" />
    <item
        android:id="@+id/removeScan"
        android:icon="@drawable/ic_action_remove"
        android:title="@string/remove_scan"
        material:showAsAction="ifRoom" />
</menu>
